fix: enable permissive CORS and explicit OPTIONS preflight handler